commit tree 52697f0e62cdd1b2616985ae71bf1ba4ed95dccd

--- a/index.html
+++ b/index.html
@@ -12,6 +12,29 @@
 
     <!-- First, create a form tag where our inputs will be nested -->
 
+      <label for='FullName'>Full Name:</label><br>
+      <input type='text' id='fullname' name='fullname' placeholder="Enter Name" required><br>
+
+      <label  for='email'>Email address:</label><br>
+      <input type='email' id='email' placeHolder='Enter Email' required></input><br>
+
+      <label for='Phone Number'>Enter Phone Number:</label><br>
+      <input type='tel'id='phone' name='phone' placeholder="Enter Telephone (optional)" required><br>
+
+      <label for='message'>Message:</label><br>
+      <textarea id='message' name='message' placeholder="Enter Message" col='6' rows="6"></textarea><br>
+<label for='checkbox'>
+  Selector this before continuing
+</label>
+      <input type='checkbox'id='check-box' > Click here to agree with ours conditions<br>
+      <input type='submit' placeholder="Submit"><br>
+
+
+
+
+
+    </form>
+
 
       <!-- Add a label for 'fullname'-->
 
